--- a/index.html
+++ b/index.html
@@ -7,6 +7,35 @@
     <link rel="stylesheet" href="app.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <style>
+    body{
+      background: url(https://images.unsplash.com/photo-1415369629372-26f2fe60c467);
+      background-size:cover;
+      background-position: center;
+      font-family: 'Lato', sans-serif;
+      color: white;
+      }
+      #content{
+      text-align:center;
+      padding-top: 25%;
+      text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
+                    0px 9px 13px rgba(0,0,0,0.1),
+                    0px 18px 23px rgba(0,0,0,0.1);
+      }
+      h1{
+      font-weight: 700;
+      font-size: 5em;
+      }
+      html{
+      height: 100%;
+      }
+      hr{
+      width: 400px;
+      border-top: : 1px solid #f8f8f8;
+      border-bottom: : 1px solid rbga(0,0,0,0.2);
+      }
+
+    </style>
   </head>
   <body>
 
