--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="app.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="“viewport”" content="“width=device-width," intitial-scale="1" maximum-scale="1”">
     <style>
     body{
       background: url(https://images.unsplash.com/photo-1415369629372-26f2fe60c467);
