--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
           <button id="buttonCompare"
             onclick="buttonCompareClicked();document.getElementById('textareaDifferences').scrollIntoView(); document.getElementsByTagName('mark')[0].scrollIntoView();"
             class="btn btn-success mt-3"><a>Compare</a></button>
-            <button class="btn btn-warning" onlick="document.getElementById('content-target').value=''; document.getElementById('textareaDifferences').innerHTML='';" ">Clear input</button>
+            <button class="btn btn-warning mt-3" onlick="document.getElementById('content-target').value=''; document.getElementById('textareaDifferences').innerHTML='';" ">Clear input</button>
             <button class="btn btn-danger mt-3" onclick="document.getElementById('content-target').value=''; document.getElementById('textareaAfter').value=''; document.getElementById('textareaDifferences').innerHTML='';"  >
               Clear all
             </button>
